[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mochi"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.58", optional = true }
bstr = { version = "0.2.17", default-features = false }
byteorder = "1.4.3"
clap = { version = "3.2.15", features = ["std", "derive"], default-features = false, optional = true }
cpu-time = "1.0.0"
hashbrown = { version = "0.12.3", features = ["inline-more"], default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rlua = { version = "0.19.4", features = ["builtin-lua54", "lua-no-oslib"] }
rustc-hash = "1.1.0"
rustyline = { version = "10.0.0", default-features = false, optional = true }
thiserror = "1.0.31"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["bin", "jemalloc"]
bin = ["anyhow", "clap", "rustyline"]
jemalloc = ["jemallocator"]
